--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^3.6.5",
     "firebase": "^7.14.3",
     "httpclient": "^0.1.0",
+    "json-server": "^0.16.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.5",
