--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "~9.1.6",
     "@angular/compiler": "~9.1.6",
     "@angular/core": "~9.1.6",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "^9.1.6",
     "@angular/material": "^9.2.3",
     "@angular/platform-browser": "~9.1.6",
@@ -27,7 +28,7 @@
     "agm-direction": "^0.7.9",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
-    "firebase": "^7.14.3",
+    "firebase": "^7.15.0",
     "httpclient": "^0.1.0",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.0.0",
