--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/core": "~9.1.6",
     "@angular/fire": "^6.0.0",
     "@angular/forms": "^9.1.6",
+    "@angular/localize": "~9.1.6",
     "@angular/material": "^9.2.3",
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
@@ -30,6 +31,7 @@
     "core-js": "^3.6.5",
     "firebase": "^7.15.0",
     "httpclient": "^0.1.0",
+    "materialize-css": "^1.0.0-rc.2",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.5",
