--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/compiler": "~9.1.6",
     "@angular/core": "~9.1.6",
     "@angular/fire": "^6.0.0",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "^9.1.6",
     "@angular/localize": "~9.1.6",
     "@angular/material": "^9.2.3",
