--- a/package.json
+++ b/package.json
@@ -27,15 +27,18 @@
     "@angular/router": "~9.1.6",
     "@netlify-builder/deploy": "^3.1.0",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@types/crypto-js": "^3.1.47",
     "agm-direction": "^0.7.9",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
     "firebase": "^7.15.0",
     "httpclient": "^0.1.0",
     "materialize-css": "^1.0.0-rc.2",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.5",
+    "secure-web-storage": "^1.0.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
@@ -44,9 +47,9 @@
     "@angular/cli": "~9.1.5",
     "@angular/compiler-cli": "~9.1.6",
     "@angular/language-service": "~9.1.6",
-    "@types/node": "^13.13.5",
     "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^13.13.12",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.2",
