--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@types/crypto-js": "^3.1.47",
     "agm-direction": "^0.7.9",
+    "angular-ng-autocomplete": "^2.0.1",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
