--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "httpclient": "^0.1.0",
     "materialize-css": "^1.0.0-rc.2",
     "ng2-search-filter": "^0.5.1",
+    "ngx-bottom-nav": "^0.5.0",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.5",
     "secure-web-storage": "^1.0.2",
