--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ng2-search-filter": "^0.5.1",
     "ngx-bottom-nav": "^0.5.0",
     "ngx-pagination": "^5.0.0",
+    "progress-tracker": "^2.0.6",
     "rxjs": "~6.5.5",
     "secure-web-storage": "^1.0.2",
     "tslib": "^1.10.0",
