--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
+    "@angular/service-worker": "~9.1.6",
     "@netlify-builder/deploy": "^3.1.0",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@ngmodule/material-carousel": "^0.6.0",
@@ -37,8 +38,11 @@
     "firebase": "^7.15.0",
     "firebase-admin": "^8.13.0",
     "firebase-tools": "^8.4.3",
+    "get-google-fonts": "^1.2.2",
     "httpclient": "^0.1.0",
+    "material-icons": "^0.3.1",
     "materialize-css": "^1.0.0-rc.2",
+    "ng-lazyload-image": "^8.0.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-bottom-nav": "^0.5.0",
     "ngx-pagination": "^5.0.0",
