--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run admin-kom:serve-ssr",
+    "serve:ssr": "node dist/admin-kom/server/main.js",
+    "build:ssr": "ng build --prod && ng run admin-kom:server:production",
+    "prerender": "ng run admin-kom:prerender"
   },
   "private": true,
   "dependencies": {
@@ -24,17 +28,20 @@
     "@angular/material": "^9.2.3",
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
+    "@angular/platform-server": "^9.1.12",
     "@angular/router": "~9.1.6",
     "@angular/service-worker": "~9.1.6",
     "@netlify-builder/deploy": "^3.1.0",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@ngmodule/material-carousel": "^0.6.0",
+    "@nguniversal/express-engine": "^9.1.1",
     "@types/crypto-js": "^3.1.47",
     "agm-direction": "^0.7.9",
     "angular-ng-autocomplete": "^2.0.1",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
+    "express": "^4.17.1",
     "firebase": "^7.15.0",
     "firebase-admin": "^8.13.0",
     "firebase-tools": "^8.4.3",
@@ -57,6 +64,8 @@
     "@angular/cli": "~9.1.5",
     "@angular/compiler-cli": "~9.1.6",
     "@angular/language-service": "~9.1.6",
+    "@nguniversal/builders": "^9.1.1",
+    "@types/express": "^4.17.7",
     "@types/jasmine": "~3.5.10",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^13.13.12",
