--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nguniversal/express-engine": "^9.1.1",
     "@types/crypto-js": "^3.1.47",
     "agm-direction": "^0.7.9",
+    "angular-bootstrap-md": "^9.3.1",
     "angular-ng-autocomplete": "^2.0.1",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
@@ -53,11 +54,12 @@
     "ng-lazyload-image": "^8.0.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-bottom-nav": "^0.5.0",
+    "ngx-owl-carousel-o": "^3.0.0",
     "ngx-pagination": "^5.0.0",
     "progress-tracker": "^2.0.6",
     "rxjs": "~6.5.5",
     "secure-web-storage": "^1.0.2",
-    "tslib": "^1.10.0",
+    "tslib": "^1.13.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
