--- a/angular.json
+++ b/angular.json
@@ -91,7 +91,8 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/manifest.webmanifest"
+              "src/manifest.webmanifest",
+              "src/firebase-messaging-sw.js"
             ]
           }
         },
