--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
+              "src/404.html",
               "src/sitemap.xml",
               "src/manifest.webmanifest"
             ],
