--- a/firebase.json
+++ b/firebase.json
@@ -4,7 +4,7 @@
     "source": "functions"
   },
   "hosting": {
-    "public": "dist",
+    "public": "dist\\admin-kom",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -12,7 +12,7 @@
     ],
     "rewrites": [
       {
-        "source": "/",
+        "source": "**",
         "destination": "/index.html"
       }
     ]
