--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/crypto-js": "^3.1.47",
     "agm-direction": "^0.7.9",
     "angular-ng-autocomplete": "^2.0.1",
+    "array-shuffle": "^1.0.1",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
